updated referenced js files

--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
         </script>
 
         <!-- personal javascript -->
-        <!-- does not exist yet -->
-        <script src="js/scripts.js"></script>
+        <script src="index.js"></script>
     </body>
 </html>
