updated log and documentation

--- a/public/documentation.html
+++ b/public/documentation.html
@@ -31,9 +31,9 @@
                     <th>Request body data format</th>
                     <th>Response body data format</th>
                 </tr>
-                </thead>
+            </thead>
         
-                <tbody>   
+            <tbody>   
                 <tr>
                     <td>Get a list of all movies</td>
                     <td>/movies</td>
@@ -67,7 +67,7 @@
                     <td>GET</td>
                     <td>:name</td>
                     <td>-</td>
-                    <td>A JSON object holding data about the data of a director</td>
+                    <td>A JSON object holding data of a director</td>
                 </tr>
 
                 <tr>
