updated index.js to recognize hashed passwords

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <body>
         <h1 class="page-container">Movie API Index</h1>
-        <p>Home page content here</p>
+        <p>Get to documentation <a href="link here">here</a></p>
         
         <!-- bootstrap jQuery, popper, and javascript plugins -->
         <script
