--- a/public/documentation.html
+++ b/public/documentation.html
@@ -20,6 +20,8 @@
         <p>Documentation content here</p>
         
         <!--api endpoints table-->
+        <!--add links for each endpoint for easier navigation and schemas??
+        https://myflixapi.smartcoder.dev/documentation -->
         <h2>API Endpoints</h2>
         <table class="table">
             <thead>
